add name confirmation when registering view weeklyRides

--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -2252,7 +2252,7 @@
                                             <div class="col-sm-6">
 
                                                 <!--<input type="button" onclick="signDriverToRide()" id="saveDriver" class="btn btn-success w-md waves-light m-b-5 m-r-15" value="Save Driver" />-->
-                                                <input type="button" onclick="deleteDriverFromRide()" id="deleteDriver" class="btn btn-danger w-md waves-light m-b-5 m-r-15" value="Remove Driver" />
+                                                <input type="button" onclick="deleteDriverFromRide()" id="deleteDriver" class="btn btn-danger w-md waves-light m-b-5 m-r-15" value="הסרת נהג" />
 
                                                 <!--<div class="form-group" id="escortDiv">
                                                     <label data-toggle="tooltip" title="Patient escorts" class="col-sm-2 control-label">מלווים</label>
