--- a/Road to Recovery/pages/weeklyRides.html
+++ b/Road to Recovery/pages/weeklyRides.html
@@ -67,7 +67,7 @@
         }
 
         .message {
-            font-style:italic;
+            
         }
 
     </style>
@@ -490,8 +490,8 @@
                             <br />
                             <div class="text-center">
 
-                                <a href="weeklyRides.html"   class="btn btn-primary waves-effect w-md waves-light m-b-10 weeks weekFocus"  id="w0">הסעות לשבוע הנוכחי</a>&nbsp&nbsp&nbsp&nbsp
-                                <a href="nextweekRides.html" class="btn btn-primary waves-effect w-md waves-light m-b-10 weeks"  id="w1">הסעות לשבוע הבא</a>
+                                <a href="weeklyRides.html" class="btn btn-primary waves-effect w-md waves-light m-b-10 weeks weekFocus" id="w0">הסעות לשבוע הנוכחי</a>&nbsp&nbsp&nbsp&nbsp
+                                <a href="nextweekRides.html" class="btn btn-primary waves-effect w-md waves-light m-b-10 weeks" id="w1">הסעות לשבוע הבא</a>
                             </div>
                             <h4 class="page-title">
                                 תמונת הסעות שבועית&nbsp&nbsp
@@ -623,6 +623,30 @@
                                 <form role="form" id="existsForm">
                                     <p class="msg">  להסעה זו כבר שובץ נהג, ודאו שאתם לוחצים על הכפתור הירוק עליו רשום לחצו לקבלת נתונים עדכניים בדף לפני ניסיון לרישום </p>
                                     <button type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"></span> אישור</button>
+                                </form>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+
+                <div class="modal fade" id="nameConfirmationModal" role="dialog">
+                    <div class="modal-dialog">
+
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header" style="padding:35px 50px;">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h4><span class="glyphicon glyphicon-road"></span> רישום להסעה </h4>
+                            </div>
+                            <div class="modal-body" style="padding:40px 50px;">
+                                <form role="form" id="nameConfForm">
+                                    <p class="msg" id="nameConfMsg"></p>
+                                    <button type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"></span> אישור</button>
+                                    <br />
+                                    <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> ביטול</button>
+
                                 </form>
                             </div>
                         </div>
