--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -407,7 +407,7 @@
                                         <div class="form-group">
                                             <label class="col-sm-4">שם המתנדב</label>
                                             <div class="col-sm-8" id="selectDriver">
-                                                <input placeholder="הזן שם" type="text" id="driver" name="driver" class="form-control ui-autocomplete-input" autocomplete="off" aria-required="true" aria-invalid="false">
+                                                <input placeholder="הזן שם" type="text" template_id="select_driver" class="form-control ui-autocomplete-input" autocomplete="off" aria-required="true" aria-invalid="false">
                                             </div>
                                         </div>
 
@@ -425,7 +425,7 @@
                                         <div class="form-group">
                                             <label class="col-sm-4">חודש</label>
                                             <div class="col-sm-8">
-                                                <input type="text" id="select_month" class="form-control" aria-required="true" aria-invalid="false">
+                                                <input type="text" template_id="select_month" class="form-control" aria-required="true" aria-invalid="false">
                                             </div>
                                         </div>
 
